[package]
name = "chatbot_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }

serde_json = "1"

sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres"
] }

tower-http = { version = "0.6", features = ["cors"] }

reqwest = { version = "0.12", features = ["json"] }

dotenvy = "0.15"